--- a/view/signup.hbs
+++ b/view/signup.hbs
@@ -2,6 +2,7 @@
   <head>
     <title>{{title}}</title>
     <link rel="stylesheet" href="/css/signup.css" />
+    <script defer src="/js/signup.js"></script>
   </head>
   <body>
     <h1>{{heading}}</h1>
