--- a/public/css/user.css
+++ b/public/css/user.css
@@ -7,3 +7,32 @@ body {
   font-family: Cambria;
   font: 1rem;
 }
+
+.user {
+  display: flex;
+  flex-direction: column;
+  height: 60vh;
+  margin: 5% 20% 5% 20%;
+  width: 60%;
+  align-items: center;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+
+.profilepic {
+  border-radius: 50%;
+  width: 10%;
+  height: 15%;
+}
+
+.user p {
+  font-family: Helvetica;
+  margin: 0;
+  padding: 8px;
+  display: flex;
+}
+
+.des {
+  font-weight: bolder;
+}
